--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
-.DS_Store
+# Byte-compiled / optimized / DLL files
+__pycache__/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+.vscode
+/air_pollution_forecasting
+/airvisual
+node_modules
