--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "@amcharts/amcharts4": "^4.10.21",
     "@amcharts/amcharts4-fonts": "^4.0.1",
     "@amcharts/amcharts4-geodata": "^4.1.21",
-    "@tensorflow-models/face-landmarks-detection": "^0.0.3",
     "@tensorflow/tfjs": "^3.8.0",
     "@tensorflow/tfjs-backend-webgl": "^3.8.0",
     "@tensorflow/tfjs-converter": "^3.8.0",
@@ -17,6 +16,7 @@
     "@amcharts/amcharts4": "^4.10.21",
     "@babel/core": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@tensorflow/tfjs": "^3.8.0",
     "@babel/preset-env": "^7.4.4",
     "babel-loader": "^8.0.5",
     "source-map-loader": "^3.0.0",
